feat:  add function that plays a round of rock paper scissors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 	<script src="myJava.js"> </script>
 	<script>
-		getComputerChoice();
+		const computerChoice = getComputerChoice();
+		playRound("rock", computerChoice);
 	</script>
 </body>
 
