refactor: make result variables more accessible

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="myJava.js"> </script>
 	<script>
 		const computerChoice = getComputerChoice();
-		playRound("rock", computerChoice);
+		console.log(playRound("rock", computerChoice));
 	</script>
 </body>
 
