--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<script src="myJava.js"> </script>
 	<script>
 		const computerChoice = getComputerChoice();
-		console.log(playRound("rock", computerChoice));
+		playRound("rock", computerChoice);
+		game();
 	</script>
 </body>
 
