feat: add buttons

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
 <head>
 	<link href="./design.css" rel="stylesheet">
+	
 </head>
 
 <body>
-	<script src="myJava.js"> </script>
+	
 	<script>
 	
-		game();
 	</script>
+	<button id="rock"> ROCK </button>
+	<button id="paper"> PAPER </button>
+	<button id="scissors"> SCISSORS </button>
+	<script src="myJava.js"> </script>
 </body>
 
 
