feat: add victory conditions and play again button

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
 <body>
 	
 	<script>
-	
+		
 	</script>
-	<button id="rock"> ROCK </button>
-	<button id="paper"> PAPER </button>
-	<button id="scissors"> SCISSORS </button>
+	<div class="flex-container">
+		<div style="width: 50%;">
+			<button id="rock"> ROCK </button>
+			<button id="paper"> PAPER </button>
+			<button id="scissors"> SCISSORS </button>
+		</div>
+	</div>
+	<div class="flex-container">
+		<div id="playerScore"> 0 </div>
+	</div>
+	<div class="flex-container">
+		<div id="result"> </div>
+	</div>
+	<div>
+		<button id="play-again"> Play Again? </button>
+	</div>
 	<script src="myJava.js"> </script>
 </body>
 
