--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link href="./design.css" rel="stylesheet">
-	
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -9,6 +9,11 @@
 	<script>
 		
 	</script>
+	<div class="flex-container" style="justify-content:center;">
+		<h1 id="msg"> I CHALLENGE YOU TO A GAME OF ROCK PAPER SCISSORS, HUMAN. </h1>
+	</div>
+	
+	<div id="msg"> </div>
 	<div class="flex-container">
 		<div style="width: 50%;">
 			<button id="rock"> ROCK </button>
