--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<script>
 		
 	</script>
-	<div class="flex-container" style="justify-content:center;">
+	<div class="flex-containercenter">
 		<h1 id="msg"> I CHALLENGE YOU TO A GAME OF ROCK PAPER SCISSORS, HUMAN. </h1>
 	</div>
 	
 	<div id="msg"> </div>
-	<div class="flex-container">
+	<div class="flex-container" style="justify>
 		<div style="width: 50%;">
 			<button id="rock"> ROCK </button>
 			<button id="paper"> PAPER </button>
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<div class="flex-container">
-		<div id="playerScore"> 0 </div>
+		<div id="playerScore"> 0 </div> <div id="computerScore"> 0 </div>
 	</div>
 	<div class="flex-container">
 		<div id="result"> </div>
