feat: add buttons for computer and center elements

--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
 	</div>
 	
 	<div id="msg"> </div>
-	<div class="flex-container" style="justify>
-		<div style="width: 50%;">
+	<div class="flex-container">
+		<div class = "flex-container-buttons" style="width: 50%;">
+			<button id="rock"> ROCK </button>
+			<button id="paper"> PAPER </button>
+			<button id="scissors"> SCISSORS </button>
+		</div>
+		<div class= "flex-container-buttons" style="width: 50%;">
 			<button id="rock"> ROCK </button>
 			<button id="paper"> PAPER </button>
 			<button id="scissors"> SCISSORS </button>
 		</div>
 	</div>
+	
 	<div class="flex-container">
-		<div id="playerScore"> 0 </div> <div id="computerScore"> 0 </div>
+		<div id="playerScore" style="display:flex; justify-content:center; width:50%;"> 0 </div>
+		<div id="computerScore" style="display:flex; justify-content:center; width: 50%;"> 0 </div>
 	</div>
 	<div class="flex-container">
 		<div id="result"> </div>
