--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		<div id="playerScore" style="display:flex; justify-content:center; width:50%;"> 0 </div>
 		<div id="computerScore" style="display:flex; justify-content:center; width: 50%;"> 0 </div>
 	</div>
-	<div class="flex-container">
+	<div class="flex-container-center">
 		<div id="result"> </div>
 	</div>
-	<div>
+	<div class="flex-container-center">
 		<button id="play-again"> Play Again? </button>
 	</div>
 	<script src="myJava.js"> </script>
