feat: add messages the computer will give the player after the game

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 	<div class="flex-container-center">
 		<button id="play-again"> Play Again? </button>
 	</div>
+	<div class="flex-container-center">
+		<p id="computerMessage"> </p>
+	</div>
 	<script src="myJava.js"> </script>
 </body>
 
