style: computer buttons highlight selected choice

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			<button id="paper"> PAPER </button>
 			<button id="scissors"> SCISSORS </button>
 		</div>
-		<div class= "flex-container-buttons" style="width: 50%;">
-			<button id="rock"> ROCK </button>
-			<button id="paper"> PAPER </button>
-			<button id="scissors"> SCISSORS </button>
+		<div class = "flex-container-buttons" style="width: 50%;">
+			<button id="computerRock"> ROCK </button>
+			<button id="computerPaper"> PAPER </button>
+			<button id="computerScissors"> SCISSORS </button>
 		</div>
 	</div>
 	
