feat: add comparative ui of player and computer choices

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 		<div id="computerScore" style="display:flex; justify-content:center; width: 50%;"> 0 </div>
 	</div>
 	<div class="flex-container-center">
+		<div id="playerChoice" style="margin:10px;"> </div>
+		<div id="winner" style="margin:10px;"> </div>
+		<div id="computerChoice" style="margin:10px;"> </div>
+	</div>
+	<div class="flex-container-center">
 		<div id="result"> </div>
 	</div>
 	<div class="flex-container-center">
