feat: add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="./design.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
@@ -15,12 +16,12 @@
 	
 	<div id="msg"> </div>
 	<div class="flex-container">
-		<div class = "flex-container-buttons" style="width: 50%;">
+		<div class = "flex-container-buttons">
 			<button id="rock"> ROCK </button>
 			<button id="paper"> PAPER </button>
 			<button id="scissors"> SCISSORS </button>
 		</div>
-		<div class = "flex-container-buttons" style="width: 50%;">
+		<div class = "flex-container-buttons">
 			<button id="computerRock"> ROCK </button>
 			<button id="computerPaper"> PAPER </button>
 			<button id="computerScissors"> SCISSORS </button>
