fix: class name typo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script>
 		
 	</script>
-	<div class="flex-containercenter">
+	<div class="flex-container-center">
 		<h1 id="msg"> I CHALLENGE YOU TO A GAME OF ROCK PAPER SCISSORS, HUMAN. </h1>
 	</div>
 	
