feat: add player and computer characters with shake animation indicating damage

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 	<div class="flex-container-center">
 		<p id="computerMessage"> </p>
 	</div>
+	<div style="display:flex; flex-direction:row;">
+		<div class="playerStance">
+			<img class="playerCharacter" id="playerimage" src="./player_stance.gif">
+		</div>
+		<div class="computerStance">
+			<img class="computerCharacter" id="computerimage" src="./computer_stance.gif">
+		</div>
+	</div>
 	<script src="myJava.js"> </script>
 </body>
 
